# signal

./: .gitignore  .megalinter.yml  LICENSE  README.md  Taskfile.yml  package-lock.json  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.history/: .megalinter_20260210023512.yml  .megalinter_20260210031625.yml  .megalinter_20260210031645.yml  .megalinter_20260210073222.yml  .megalinter_20260210073307.yml  .megalinter_20260210073312.yml  .megalinter_20260210073318.yml  .megalinter_20260210073423.yml  .megalinter_20260210073706.yml  .megalinter_20260210073728.yml  .megalinter_20260210073752.yml  .megalinter_20260210073803.yml  .megalinter_20260210073815.yml  .megalinter_20260210073827.yml  .megalinter_20260210073842.yml  .megalinter_20260210073851.yml  .megalinter_20260210073901.yml  .megalinter_20260210073916.yml  .megalinter_20260210073924.yml  .megalinter_20260210074023.yml  .megalinter_20260210074225.yml  .megalinter_20260211010802.yml  .megalinter_20260211020847.yml  .megalinter_20260211020931.yml  .megalinter_20260211020943.yml  .megalinter_20260211021037.yml  .megalinter_20260211164617.yml  .megalinter_20260211164948.yml  .megalinter_20260211164952.yml  .megalinter_20260211165012.yml  .megalinter_20260211165044.yml  .megalinter_20260211165109.yml  .megalinter_20260211172436.yml  (+67 more)
server/: .env.example  IMPLEMENTATION_SUMMARY.md  PLAID_README.md  README.md  main.py  plaid_adapter.py  pyproject.toml  requirements.txt
server/tests/: __init__.py  conftest.py  test_error_handling.py  test_health.py  test_plaid_adapter.py  test_transaction_logging.py
(+213 files in other folders)
