[project]
name = "signal-server"
version = "0.1.0"
description = "Backend API for Signal application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "plaid-python>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
